examples/bad/FormFeedback.tsx
export function SignupForm() {
  return (
    <form>
      <input name="email" />
      <button type="submit">Create account</button>
    </form>
  );
}
